# rs-postgres-stat2otel

./: Cargo.toml  README.md
examples/postgres-stat2prometheus/: Cargo.toml  run.sh  sample.d
examples/postgres-stat2prometheus/src/: main.rs
sample.d/: all.toml  pg12.pg_stat_database.toml  pg_stat_activity.toml  pg_stat_database.toml  pg_stat_wal.toml
src/: col.rs  evt.rs  gauge.rs  label.rs  lib.rs  metrics.rs  multi.rs  query.rs  row.rs  single.rs
