[package]
name = "rs-postgres-stat2otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = {version="0.18.0", features=["metrics"]}

serde = {version="1.0.150", features=["derive"]}

toml = {version="0.5.9", optional=true}

[features]
default = ["config_toml"]

config_toml = ["toml"]
