[package]
name = "postgres-stat2prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-postgres-stat2otel = { path="../..", features=["config_toml"] }

opentelemetry = { version="0.18.0", features=["metrics"]}

opentelemetry-prometheus = "0.11.0"
prometheus = "0.13.3"

postgres = "0.19.4"
